# Epitech_Base

./: .gitignore  BADGES  ForTheComminity  Makefile  README.md  STATUS  VERSION  _config.yml  all_tests.sh  builder.sh  clear.sh  commit.sh  commit_name.py  push_that.sh  run.sh  style_check.sh  unit_tests_check.sh
.github/workflowd/: sync-docs.yml
.github/workflows/: build-test.yml  doc-lint-link-checker.yml  integrity-checker.yml  jekyll-gh-pages.yml  lib-unit-test.yml  sync-docs.yml
build_files/: Makefile  build_all.sh  builder.sh
build_files/lib/: Makefile  main.c  main_test.c
build_files/lib/2list/: Makefile
build_files/lib/error/: Makefile  README.md  new_ideas.md
build_files/lib/file/: Makefile  README.md
build_files/lib/flag/: Makefile  README.md
build_files/lib/llist/: Makefile  README.md
build_files/lib/newcsfml/: Makefile  README.md  new_ideas.md
build_files/lib/newerror/: Makefile  README.md
build_files/lib/print/: Makefile  README.md  new_ideas.md
build_files/lib/str/: Makefile  README.md  new_ideas.md
build_files/lib/test_lib/: main.c  test.h  test_base.c  test_llist.c  test_newcsfml.c  test_print.c  test_str.c  test_twodlist.c  test_utils.c
build_files/lib/twod_list/: Makefile
build_files/lib/twodlist/: Makefile  README.md
build_files/lib/utils/: Makefile  README.md  new_ideas.md
build_files/test/: Makefile  main.c
build_files/test/bonus/: bonus_file.c
build_files/test/includes/: include.h  include_test.h
build_files/test/sources/: source.c
build_files/test/tests/: test_file.c  test_seg.c
build_files/tree/: .gitignore  Makefile  main.c
build_files/tree/bonus/: bonus_file.c
build_files/tree/include/: include_file.h  include_test.h
build_files/tree/includes/: include.h  test.h
build_files/tree/source/: source.c  source_file.c
build_files/tree/sources/: source.c
build_files/tree/test/: test_file.c  test_redirect.c  test_seg.c
build_files/tree/tests/: test_file.c  test_redirect.c
docs/: README.md  _config.yml  index.md  lib.md  makefile.md  styles.css
docs/_data/sidebars/: sidebar.yml
docs/_includes/: footer.html  head.html
docs/lib/file/: README.md
docs/lib/flag/: README.md
docs/lib/llist/: README.md
docs/lib/newcsfml/: README.md  best_practices.md  file_structure.md  naming_conventions.md  quick_reference.md
docs/lib/newerror/: README.md
docs/lib/print/: README.md
docs/lib/str/: README.md
docs/lib/twodlist/: README.md
docs/lib/utils/: README.md
docs/pages/docs/: home.md  lib.md  lib_file_doc.md  lib_flag_doc.md  lib_llist_doc.md  lib_newcsfml_doc.md  lib_newcsfml_doc_best_practices.md  lib_newcsfml_doc_file_structure.md  lib_newcsfml_doc_modules_audios.md  lib_newcsfml_doc_modules_audios_music.md  lib_newcsfml_doc_modules_audios_sound.md  lib_newcsfml_doc_modules_games.md  lib_newcsfml_doc_modules_games_event.md  lib_newcsfml_doc_modules_games_game.md  lib_newcsfml_doc_modules_games_joystick.md  lib_newcsfml_doc_modules_games_keyboard.md  lib_newcsfml_doc_modules_games_mouse.md  lib_newcsfml_doc_modules_games_window.md  lib_newcsfml_doc_modules_games_window_settings.md  lib_newcsfml_doc_modules_graphics.md  lib_newcsfml_doc_modules_graphics_animation.md  lib_newcsfml_doc_modules_graphics_background.md  lib_newcsfml_doc_modules_graphics_button.md  lib_newcsfml_doc_modules_graphics_particle.md  lib_newcsfml_doc_modules_graphics_sprite.md  lib_newcsfml_doc_modules_graphics_text.md  lib_newcsfml_doc_modules_graphics_texture.md  lib_newcsfml_doc_modules_graphics_view.md  lib_newcsfml_doc_modules_systems.md  lib_newcsfml_doc_modules_systems_clock.md  lib_newcsfml_doc_modules_systems_color.md  lib_newcsfml_doc_modules_systems_other.md  lib_newcsfml_doc_modules_systems_utils.md  lib_newcsfml_doc_modules_systems_vector.md  lib_newcsfml_doc_modules_systems_watcher.md  lib_newcsfml_doc_naming_conventions.md  lib_newcsfml_doc_quick_reference.md  lib_newcsfml_doc_template_overview.md  lib_newcsfml_doc_template_submodule.md  lib_newerror_doc.md  (+8 more)
docs_2/lib/file/: README.md
docs_2/lib/flag/: README.md
docs_2/lib/newcsfml/: README.md  best_practices.md  quick_reference.md
docs_2/lib/newerror/: README.md
docs_2/lib/print/: README.md
docs_2/lib/str/: README.md
docs_2/lib/twodlist/: README.md
include/: my.h  my_macro_abs.h  mylist.h
lib/: Makefile
lib/file/: Makefile
lib/file/includes/: file.h
lib/file/sources/: show.c  struct.c
lib/flag/: Makefile
lib/flag/sources/: flag.c  load.c
lib/llist/: Makefile
lib/llist/sources/: llist.c
lib/my/: Makefile  concat_params.c  my_compute_power_rec.c  my_compute_square_root.c  my_find_prime_sup.c  my_getnbr.c  my_is_prime.c  my_isneg.c  my_macro_abs.c  my_put_nbr.c  my_putchar.c  my_putstr.c  my_revstr.c  my_show_word_array.c  my_showmem.c  my_showstr.c  my_sort_int_array.c  my_str_isalpha.c  my_str_islower.c  my_str_isnum.c  my_str_isprintable.c  my_str_isupper.c  my_str_to_word_array.c  my_strcapitalize.c  my_strcat.c  my_strcmp.c  my_strcpy.c  my_strdup.c  my_strlen.c  my_strlowcase.c  my_strncat.c  my_strncmp.c  my_strncpy.c  my_strstr.c  my_strupcase.c  my_swap.c  my_swap_char.c
lib/newcsfml/: Makefile
lib/newcsfml/includes/: newcsfml.h
lib/newerror/: Makefile
lib/print/: Makefile
lib/str/: Makefile
lib/twodlist/: Makefile
lib/utils/: Makefile
tests/: test_concat_params.c  test_my_compute_power_rec.c  test_my_compute_square_root.c  test_my_find_prime_sup.c  test_my_getnbr.c  test_my_is_prime.c  test_my_islower.c  test_my_isneg.c  test_my_isnum.c  test_my_isprintable.c  test_my_isupper.c  test_my_macro_abs.c  test_my_put_nbr.c  test_my_putstr.c  test_my_show_word_array.c  test_my_sort_int_array.c  test_my_str_isalpha.c  test_my_str_to_word_array.c  test_my_strcapitalize.c  test_my_strcat.c  test_my_strcmp.c  test_my_strdup.c  test_my_strlen.c  test_my_strncat.c  test_my_strncmp.c  test_my_swap.c  test_my_swap_char.c
tree/: .clang-format  CMakeLists.txt
tree/includes/: include.h
tree/includes/sub_includes/: include_define.h  include_prototype.h  include_typedef.h
tree/sources/: source.c
tree/tests/: test_file.c
(+952 files in other folders)
